--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <header>
-        <div id="logo-container"><img src="Asset 4@3x.png" alt="logo" id="logo" name="logo"></div>
+        <div id="logo-container">
+            <a href="#">
+                <img src="Asset 4@3x.png" alt="logo" id="logo" name="logo">
+            </a>
+        </div>
     </header>
     <nav id="navbar-container">
         <ul id="navbar">
@@ -21,14 +25,15 @@
     </nav>
     <main>
         <section class="row first">
-            <div id="">
-                
+            <div class="content firstRow">
+                <h2>30% Off for Newlywed Couple</h2>
+                <p></p>
             </div>
         </section>
         <section class="row second">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
+            <div class="content" id="firstRow"></div>
+            <div class="content" id="secondRow"></div>
+            <div calss="content" id="thirdRow"></div>
         </section>
     </main>
     <footer>
